--- a/views/partials/search-recipe.hbs
+++ b/views/partials/search-recipe.hbs
@@ -27,16 +27,20 @@
             <img class="img-responsive" src="{{imageUrl}}" />
         </a>
         <div class="tile-desc">
-            <h3>Contains:</h3>
-            <ul>
+            <ul class="recipe-times">
+<li><span class="glyphicon glyphicon-time"></span>Prep: {{prepTime}} minutes</li>
+<li><span class="glyphicon glyphicon-time"></span>Cook: {{cookTime}} minutes</li>
+                </ul>
+            <h4>Contains:</h4>
+            <ul class="ingredients-list">
                 {{#each ingredients}}
-                <li>{{name}}</li>
+                <li><span><img src="{{iconUrl}}" /></span>{{name}}</li>
                 {{/each}}
             </ul>
         </div>
         <div class="tile-footer">
             <div class="heart-total">
-                <span class="glyphicon glyphicon-heart"></span><span>112</span>
+                <span class="glyphicon glyphicon-heart"></span><span>{{likes}}</span>
             </div>
             <input type="checkbox" class="hidden" id="like-{{_id}}">
             <label for="like-{{_id}}" class="button-like">
