--- a/views/layouts/recipes.hbs
+++ b/views/layouts/recipes.hbs
@@ -18,7 +18,7 @@
             <div class="modal-body">
                 <ul class="nav nav-pills">
                     <li class="active"><a href="#ingredientsTab" data-toggle="tab">Ingredients</a></li>
-                    <li><a href="#intoleranceTab" data-toggle="tab">Intolerance / Preference</a></li>
+                    <li><a href="#intoleranceTab" data-toggle="tab">Intolerance / Pref</a></li>
                 </ul>
                 <div class="panel-body no-pad">
                     <div class="tab-content">
