--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -63,6 +63,7 @@ body {
           &:after {
             font-size: 19px;
             color: #fff;
+            font-size: 20px;
           }
       }
   }
